--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ material = "1.12.0"
 ktor-version = "3.1.1"
 qos-logback = "1.5.16"
 kotlinx-serialization = "1.8.0"
+kotlinx-coroutine = "1.7.3"
 koin = "4.0.2"
 
 [libraries]
@@ -39,9 +40,12 @@ ktor-client-android = { group = "io.ktor", name = "ktor-client-android", version
 ktor-serialization-kotlinx-json = { group = "io.ktor", name = "ktor-serialization-kotlinx-json", version.ref = "ktor-version" }
 ktor-client-content-negotiation = { group = "io.ktor", name = "ktor-client-content-negotiation", version.ref = "ktor-version" }
 ktor-client-logging = { group = "io.ktor", name = "ktor-client-logging", version.ref = "ktor-version" }
-qos-logback = { group = "ch.qos.logback", name = "logback-classic", version.ref = "qos-logback" }
+#qos-logback = { group = "ch.qos.logback", name = "logback-classic", version.ref = "qos-logback" }
 kotlinx-serialization = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
+#kotlinx-coroutines = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "kotlinx-coroutine" }
+koin-core = { group = "io.insert-koin", name = "koin-core", version.ref = "koin" }
 koin-android = {group = "io.insert-koin", name = "koin-android", version.ref="koin"}
+koin-compose = { group = "io.insert-koin", name = "koin-androidx-compose", version.ref = "koin" }
 
 
 [plugins]
@@ -50,3 +54,6 @@ kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 android-library = { id = "com.android.library", version.ref = "agp" }
+
+[bundles]
+koin = ["koin-core", "koin-android", "koin-compose"]
