--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,7 +8,7 @@ espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.10.1"
 composeBom = "2024.04.01"
-navigationCompose = "2.8.8"
+navigationCompose = "2.8.9"
 appcompat = "1.7.0"
 material = "1.12.0"
 ktor-version = "3.1.1"
@@ -18,6 +18,11 @@ material3 = "1.3.1"
 coil = "3.1.0"
 security-crypto = "1.1.0-alpha06"
 gson = "2.10.1"
+maps-compose = "2.11.4"
+play-services-location = "21.0.1"
+play-services-maps = "18.2.0"
+play-services-kotlinx-coroutines = "1.7.3"
+accompanist-permissions = "0.37.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -51,6 +56,11 @@ coil-compose = { group = "io.coil-kt.coil3", name = "coil-compose", version.ref 
 coil-network = { group = "io.coil-kt.coil3", name = "coil-network-okhttp", version.ref = "coil" }
 androidx-security-crypto = { group = "androidx.security", name = "security-crypto", version.ref = "security-crypto" }
 gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
+maps-compose = { group = "com.google.maps.android", name = "maps-compose", version.ref = "maps-compose" }
+play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "play-services-location" }
+play-services-maps = { group = "com.google.android.gms", name = "play-services-maps", version.ref = "play-services-maps" }
+play-services-kotlinx-coroutines = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-play-services", version.ref = "play-services-kotlinx-coroutines" }
+accompanist-permissions = { group = "com.google.accompanist", name = "accompanist-permissions", version.ref = "accompanist-permissions" }
 
 
 [plugins]
